--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  },
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
@@ -13,6 +17,6 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "ejs": "~0.8.5"  
+    "ejs": "~0.8.5"
     }
 }
